# trial-cpp

./: .gitignore  .gitmodules  docker-compose.yml  hold  makefile  readme.md
aliossc/: .gitignore  CMakeLists.txt  CMakeSettings.json
aliossc/aliosst/: CMakeLists.txt  Config.example.json
aliossc/aliosst/res/: Config.example.json
aliossc/aliosst/src/: main.cpp
aliossc/argscli11/: CMakeLists.txt
aliossc/argscli11/src/: main.cpp
aliossc/argsgflags/: CMakeLists.txt
aliossc/argsgflags/src/: main.cpp
aliossc/cmake/: ImportAliyunOss.cmake  ImportBlend2D.cmake  ImportCli11.cmake  ImportCmdline.cmake  ImportGflags.cmake  ImportJsonCpp.cmake  ImportNlohmannJson.cmake
aliossc/test1/: CMakeLists.txt
aliossc/test1/src/: main.cpp
aliossc/uiblend2d/: CMakeLists.txt
aliossc/uiblend2d/src/: main.cpp
asmjit2demo/: CMakeLists.txt  Readme.md
asmjit2demo/cmake/: AsmJitBuild.cmake
asmjit2demo/simple/: CMakelists.txt
asmjit2demo/simple/src/: main.cpp
asmjitdemo/: CMakeLists.txt  Readme.md
asmjitdemo/avxdemo/: CMakeLists.txt
asmjitdemo/avxdemo/src/: main.cpp
asmjitdemo/cmake/: AsmJitBuild.cmake
asmjitdemo/constpooldemo/: CMakeLists.txt
asmjitdemo/constpooldemo/src/: main.cpp
asmjitdemo/extfuncdemo/: CMakeLists.txt
asmjitdemo/extfuncdemo/src/: main.cpp
asmjitdemo/fibdemo/: CMakeLists.txt
asmjitdemo/fibdemo/src/: main.cpp
asmjitdemo/funcdemo/: CMakeLists.txt
asmjitdemo/funcdemo/src/: main.cpp
asmjitdemo/jumbtabledemo/: CMakeLists.txt
asmjitdemo/jumbtabledemo/src/: main.cpp
asmjitdemo/simple/: CMakeLists.txt
asmjitdemo/simple/src/: main.cpp
asmjitdemo/stackdemo/: CMakeLists.txt
asmjitdemo/stackdemo/src/: main.cpp
baredemo/: CMakeLists.txt
baredemo/cmake/: ExertDepRes.cmake
baredemo/lib/libmatoya/: readme.md
baredemo/src/: main.cpp
boostdemo/: .editorconfig  CMakeLists.txt  CMakeSettings.json
boostdemo/cmake/: Boost.cmake  BoostExtDi.cmake  BoostExtMp.cmake  BoostExtSml.cmake  BoostExtSml2.cmake  Crow.cmake
boostdemo/crowdemo/: CMakeLists.txt  main.cpp  test.http
boostdemo/didemo/: CMakeLists.txt  main.cpp
boostdemo/mpdemo/: CMakeLists.txt  main.cpp
boostdemo/simple/: CMakeLists.txt  main.cpp
boostdemo/sml2demo/: CMakeLists.txt  main.cpp
boostdemo/smldemo/: CMakeLists.txt  main.cpp
boostrial/: .gitignore  readme.md
boostrial/asiodemo/: CMakeLists.txt  main.cpp
boostrial/beastdemo/: CMakeLists.txt
cmdemo/: CMakeLists.txt  Readme.md
cmdemo/ocvdemo/: CMakeLists.txt
cmdemo/ssh2demo/: CMakeLists.txt  main.cpp
codemo/: codemo.sln
codemo/codemo/: a.cpp  codemo.cpp  codemo.vcxproj  codemo.vcxproj.filters
elementsdemo/: readme.md
elementsdemo/baredemo/: CMakeLists.txt
elementsdemo/baredemo/cmake/: ExertDepRes.cmake
elementsdemo/baredemo/lib/libmatoya/winx86/: matoya.lib
elementsdemo/elementsdemo/: .gitignore
elementsdemo/elementsdemo/baredemo/lib/libmatoya/winx64/: matoya.lib
elementsdemo/elementsdemo/baredemo/src/: main.cpp
elementsdemo/elementsdemo/sshclient/src/: main.cpp
elementsdemo/elementsdemo/sshclient/src/view/: main_app.cpp  main_panel.cpp  main_panel.h
elementsdemo/sshclient/: CMakeSettings.json
elementsdemo/sshclient/src/view/: login_panel.cpp  login_panel.h  main_app.h
gnuwin32/: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
gnuwin32/calcul/: CMakeLists.txt
gnuwin32/calcul/src/: calcul.c  calcul.h  calcul.l  calcul.y  main.cpp
gnuwin32/calculjit/: CMakeLists.txt
gnuwin32/calculjit/src/: calculjit.c  calculjit.h  calculjit.l  calculjit.y  main.cpp
gnuwin32/cmake/: GnuWin32Bison.cmake  GnuWin32Flex.cmake
gnuwin32/woco/: CMakeLists.txt
gnuwin32/woco/src/: lex.h  main.cpp  woco.l
gnuwin32/wocopp/: CMakeLists.txt
gnuwin32/wocopp/src/: wocopp.l
leveldbdemo/: CMakeLists.txt  Readme.md
leveldbdemo/cmake/: Boost.cmake  CppJieBa.cmake  Crow.cmake  Faker.cmake  LevelDb.cmake  Oatpp.cmake
leveldbdemo/crowdemo/: CMakeLists.txt
leveldbdemo/oatppdemo/: CMakeLists.txt  Readme.md  main.cpp
leveldbdemo/oatppdemo/controller/: UserController.hpp
leveldbdemo/simple/: CMakeLists.txt  main.cpp
libs/: .gitignore  libssh2.md  spdlog.md
libuvdemo/: CMakeLists.txt
libuvdemo/cmake/: Libuv.cmake
libuvdemo/eventdemo/: CMakeLists.txt  main.cpp
libuvdemo/fsdemo/: CMakeLists.txt  main.cpp
libuvdemo/idledemo/: CMakeLists.txt  main.cpp
libuvdemo/pipedemo/: CMakeLists.txt  main.cpp
libuvdemo/simple/: CMakeLists.txt  main.cpp
libuvdemo/tcpcli/: CMakeLists.txt  main.cpp
libuvdemo/tcpdemo/: CMakeLists.txt  main.cpp
libxlsdemo/: CMakeLists.txt  main.cpp  readme.md
libzmqdemo/: CMakeLists.txt  CMakeSettings.json
libzmqdemo/cmake/: Catch2.cmake  Cppzmq.cmake  Libzmq.cmake
libzmqdemo/cpptcpdemo/: CMakeLists.txt  main.cpp
libzmqdemo/simple/: CMakeLists.txt  main.cpp
modtrial/: modtrial.sln
modtrial/modtrial/: moddattr.ixx  moddwindow.ixx  modtrial.cpp  modtrial.vcxproj  modtrial.vcxproj.filters
oldtrial/src/: main.cpp
sdldemo/: CMakeLists.txt
sdldemo/cmake/: ImportSDL.cmake
sdldemo/simple/: CMakeLists.txt
sdldemo/simple/src/: main.cpp
sdldemo/simpleimg/: CMakeLists.txt
sdldemo/simpleimg/src/: main.cpp
sfmldemo/: CMakeLists.txt  Readme.md
sfmldemo/cmake/: SFML.cmake
sfmldemo/simple/: CMakeLists.txt  main.cpp
slintdemo/: CMakeLists.txt  Readme.md  main.cpp  slintdemo_ui.slint
slintdemo/cmake/: BuildLibSsh.cmake  BuildSlint.cmake
slintdemo/demo1/: CMakeLists.txt
slintdemo/demo1/src/: main.cpp
slintdemo/demo1/src/ui/widgets/: sidebar.slint
slintdemo/demo2/: CMakeLists.txt
slintdemo/demo2/src/: main.cpp
slintdemo/demo2/src/ui/: demo2_ui.slint
slintdemo/src/: main.cpp
slintdemo/src/ui/: slintdemo_ui.slint
src/: main.cpp  timing.h
sshclient/: CMakeLists.txt  CMakeSettings.json
sshclient/src/: main.cpp
sshclient/src/view/: main_app.cpp  main_app.h  main_window.cpp  main_window.h
trial/: .gitignore  CMakeLists.txt
trial/lrvalue/: CMakeLists.txt  main.cpp
vscmdemo/: CMakeLists.txt
vscmdemo/ocv4demo/: CMakeLists.txt
vscmdemo/ocv4demo/src/: main.cpp
